# headless-curator

./: .gitignore  README.md  auth_helper.html  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  curator.py  main.py  scheduler.py
src/apple_music/: __init__.py  auth.py  client.py  models.py
src/applescript/: __init__.py  music_app.py
src/database/: __init__.py  models.py  repository.py
src/musicbrainz/: __init__.py  client.py
src/utils/: __init__.py  config.py  logging.py  notifications.py
src/web/: __init__.py  app.py
src/web/templates/: artists.html  auth.html  base.html  index.html  playlist.html  settings.html
tests/: __init__.py  test_curator.py  test_database.py  test_models.py  test_musicbrainz.py
